# me

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  biome.json  biome.jsonc  contentlayer.config.ts  mdx-components.tsx  mdx.d.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  rome.json  tailwind.config.js  tsconfig.json
.claude/: settings.local.json
app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
components/: BlogList.tsx  Card.tsx  CodeBlock.tsx  Footer.tsx  Image.tsx  InstagramEmbed.tsx  LayoutWrapper.tsx  Link.tsx  MDXComponents.tsx  MobileNav.tsx  Navigation.tsx  NewsletterForm.tsx  PageTitle.tsx  Pagination.tsx  Pre.tsx  SEO.tsx  ScrollTop.tsx  ScrollTopAndComment.tsx  SearchBar.tsx  SectionContainer.tsx  TOCInline.tsx  TableOfContentsInline.tsx  Tag.tsx  ThemeSwitch.tsx
crates/unveil_ingestor/: Cargo.toml  manifest.example.json
crates/unveil_ingestor/src/: config.rs
crates/unveil_ingestor/src/marketplace/: mercari.rs  mod.rs  rakuten.rs
data/: index.ts  projectsData.ts  siteMetadata.js  siteMetadata.ts
layouts/: AuthorLayout.tsx  ListLayout.tsx  PostLayout.tsx  PostSimple.tsx
lib/: remark-code-title.ts  remark-extract-frontmatter.ts  remark-img-to-jsx.ts  remark-toc-headings.ts
pages/: 404.tsx  _app.tsx  _document.tsx  about.tsx  blog.tsx  index.tsx  projects.tsx  tags.tsx  tools.tsx
public/: robots.txt
scripts/: build-ken-all-rome.mjs  build-ken-all.mts  compose.js  compose.mjs  compose.mts  fetch-covers.mts  generate-rss.mjs  generate-rss.mts  generate-sitemap.mjs  generate-sitemap.mts  (+3 more)
(+195 files in other folders)
